[gd_scene load_steps=5 format=3 uid="uid://cpoqdewk4q7oh"]

[ext_resource type="Script" uid="uid://c3h0dj3omfxue" path="res://ui/scenes/gameplay_screen/unit_card.gd" id="1_l1g7r"]
[ext_resource type="Texture2D" uid="uid://dudamou3royj8" path="res://assets/gfx/cursor5.png" id="1_rkc5k"]
[ext_resource type="Texture2D" uid="uid://bmq8ecywk1m46" path="res://assets/gfx/cursor2.png" id="2_l1g7r"]
[ext_resource type="Texture2D" uid="uid://jlb70ugqwqns" path="res://assets/gfx/cursor3.png" id="3_fjx06"]

[node name="UnitCard" type="MarginContainer"]
offset_top = 304.0
offset_right = 500.0
offset_bottom = 360.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 12
script = ExtResource("1_l1g7r")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Portrait" type="TextureRect" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("1_rkc5k")
stretch_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Jacek"

[node name="HPLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "HP 3/4"

[node name="MoveAbilityButton" type="TextureButton" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("1_rkc5k")

[node name="AttackAbilityButton" type="TextureButton" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("2_l1g7r")

[node name="CatchAbilityButton" type="TextureButton" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("3_fjx06")
